--- a/email_message.opam
+++ b/email_message.opam
@@ -6,33 +6,21 @@ bug-reports: "https://github.com/janestreet/email_message/issues"
 dev-repo: "https://github.com/janestreet/email_message.git"
 license: "Apache-2.0"
 build: [
-  ["./configure" "--prefix" prefix]
-  [make]
+  ["jbuilder" "build-package" "email_message" "-j" jobs]
 ]
 depends: [
-  "ocamlbuild"      {build}
-  "oasis"           {build & >= "0.4"}
-  "ocamlfind"       {build & >= "1.3.2"}
   "async"
-  "bin_prot"
   "core"
   "core_extended"
-  "cryptokit"
-  "fieldslib"
-  "js-build-tools"  {build}
-  "magic-mime"
-  "ounit"
-  "ppx_assert"
-  "ppx_bench"
+  "jbuilder"
   "ppx_driver"
-  "ppx_expect"
-  "ppx_hash"
-  "ppx_inline_test"
   "ppx_jane"
   "re2"
-  "sexplib"
-  "typerep"
-  "variantslib"
+  "cryptokit"
+  "magic-mime"
+  "ounit"
 ]
 available: [ ocaml-version >= "4.03.0" ]
-conflicts: [ "oasis" {= "0.4.7"} ]
+descr: "
+E-mail message parser
+"
