--- a/email_message.opam
+++ b/email_message.opam
@@ -12,13 +12,13 @@ depends: [
   "async"
   "core"
   "core_extended"
-  "jbuilder"                {build}
+  "jbuilder"                {build & >= "1.0+beta2"}
   "ppx_driver"
   "ppx_jane"
   "re2"
   "cryptokit"
   "magic-mime"
-  "ocaml-migrate-parsetree"
+  "ocaml-migrate-parsetree" {>= "0.4"}
   "ounit"
 ]
 available: [ ocaml-version >= "4.03.0" ]
