--- a/email_message.opam
+++ b/email_message.opam
@@ -1,4 +1,5 @@
 opam-version: "1.2"
+version: "v0.9.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/email_message"
@@ -9,13 +10,13 @@ build: [
   ["jbuilder" "build" "--only-packages" "email_message" "--root" "." "-j" jobs "@install"]
 ]
 depends: [
-  "async"
-  "core"
-  "core_extended"
+  "async"                   {>= "v0.9" & < "v0.10"}
+  "core"                    {>= "v0.9" & < "v0.10"}
+  "core_extended"           {>= "v0.9" & < "v0.10"}
   "jbuilder"                {build & >= "1.0+beta2"}
-  "ppx_driver"
-  "ppx_jane"
-  "re2"
+  "ppx_driver"              {>= "v0.9" & < "v0.10"}
+  "ppx_jane"                {>= "v0.9" & < "v0.10"}
+  "re2"                     {>= "v0.9" & < "v0.10"}
   "cryptokit"
   "magic-mime"
   "ocaml-migrate-parsetree" {>= "0.4"}
