--- a/email_message.opam
+++ b/email_message.opam
@@ -3,7 +3,7 @@ maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/email_message"
 bug-reports: "https://github.com/janestreet/email_message/issues"
-dev-repo: "https://github.com/janestreet/email_message.git"
+dev-repo: "git+https://github.com/janestreet/email_message.git"
 license: "Apache-2.0"
 build: [
   ["jbuilder" "build" "--only-packages" "email_message" "--root" "." "-j" jobs "@install"]
