--- a/email_message.opam
+++ b/email_message.opam
@@ -6,7 +6,7 @@ bug-reports: "https://github.com/janestreet/email_message/issues"
 dev-repo: "git+https://github.com/janestreet/email_message.git"
 license: "Apache-2.0"
 build: [
-  ["jbuilder" "build" "--only-packages" "email_message" "--root" "." "-j" jobs "@install"]
+  ["jbuilder" "build" "-p" name "-j" jobs]
 ]
 depends: [
   "async"
