--- a/email_message.opam
+++ b/email_message.opam
@@ -13,14 +13,14 @@ depends: [
   "core"
   "core_extended"
   "core_kernel"
-  "ppx_driver"
   "ppx_jane"
   "re2"
   "angstrom"
   "cryptokit"
-  "jbuilder"                {build & >= "1.0+beta12"}
+  "jbuilder"                {build & >= "1.0+beta18.1"}
   "magic-mime"
   "ocaml-migrate-parsetree" {>= "1.0"}
+  "ppxlib"                  {>= "0.1.1"}
 ]
 available: [ ocaml-version >= "4.04.1" ]
 descr: "
