--- a/email_message.opam
+++ b/email_message.opam
@@ -1,4 +1,5 @@
 opam-version: "1.2"
+version: "v0.11.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/email_message"
@@ -9,12 +10,12 @@ build: [
   ["jbuilder" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "async"
-  "core"
-  "core_extended"
-  "core_kernel"
-  "ppx_jane"
-  "re2"
+  "async"                   {>= "v0.11" & < "v0.12"}
+  "core"                    {>= "v0.11" & < "v0.12"}
+  "core_extended"           {>= "v0.11" & < "v0.12"}
+  "core_kernel"             {>= "v0.11" & < "v0.12"}
+  "ppx_jane"                {>= "v0.11" & < "v0.12"}
+  "re2"                     {>= "v0.11" & < "v0.12"}
   "angstrom"
   "cryptokit"
   "jbuilder"                {build & >= "1.0+beta18.1"}
