--- a/email_message.opam
+++ b/email_message.opam
@@ -4,7 +4,7 @@ authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/email_message"
 bug-reports: "https://github.com/janestreet/email_message/issues"
 dev-repo: "git+https://github.com/janestreet/email_message.git"
-license: "Apache-2.0"
+license: "MIT"
 build: [
   ["jbuilder" "build" "-p" name "-j" jobs]
 ]
