--- a/email_message.opam
+++ b/email_message.opam
@@ -1,14 +1,16 @@
-opam-version: "1.2"
+opam-version: "2.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/email_message"
 bug-reports: "https://github.com/janestreet/email_message/issues"
 dev-repo: "git+https://github.com/janestreet/email_message.git"
+doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/email_message/index.html"
 license: "MIT"
 build: [
-  ["jbuilder" "build" "-p" name "-j" jobs]
+  ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
+  "ocaml" {>= "4.07.0"}
   "async"
   "core"
   "core_extended"
@@ -17,12 +19,9 @@ depends: [
   "re2"
   "angstrom"
   "cryptokit"
-  "jbuilder"                {build & >= "1.0+beta18.1"}
+  "dune"          {build & >= "1.5.1"}
   "magic-mime"
-  "ocaml-migrate-parsetree" {>= "1.0"}
-  "ppxlib"                  {>= "0.1.0"}
 ]
-available: [ ocaml-version >= "4.06.1" ]
-descr: "
-E-mail message parser
+synopsis: "E-mail message parser"
+description: "
 "
