--- a/email_message.opam
+++ b/email_message.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.12.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/email_message"
@@ -10,13 +11,13 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "4.07.0"}
-  "async"
-  "core"
-  "core_extended"
-  "core_kernel"
-  "ppx_jane"
-  "re2"
+  "ocaml"         {>= "4.07.0"}
+  "async"         {>= "v0.12" & < "v0.13"}
+  "core"          {>= "v0.12" & < "v0.13"}
+  "core_extended" {>= "v0.12" & < "v0.13"}
+  "core_kernel"   {>= "v0.12" & < "v0.13"}
+  "ppx_jane"      {>= "v0.12" & < "v0.13"}
+  "re2"           {>= "v0.12" & < "v0.13"}
   "angstrom"
   "cryptokit"
   "dune"          {build & >= "1.5.1"}
