--- a/src/dune
+++ b/src/dune
@@ -1,6 +1,6 @@
 (library (name email_message) (public_name email_message)
- (libraries async base64.rfc2045 core cryptokit email_address magic-mime re2
-  core.uuid)
+ (libraries async base64 base64.rfc2045 core cryptokit email_address
+  magic-mime re2 core.uuid)
  (preprocess (pps ppx_jane)))
 
 (ocamllex email_lexer media_type_lexer quoted_printable_lexer)
