--- a/email_address/test/dune
+++ b/email_address/test/dune
@@ -1,4 +1,4 @@
 (library (name email_address_test)
  (libraries textutils.ascii_table async_kernel core_kernel email_address
-  expect_test_helpers)
+  expect_test_helpers_async expect_test_helpers_core)
  (preprocess (pps ppx_jane)))
