--- a/email_message.opam
+++ b/email_message.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.14.0"
 maintainer: "opensource@janestreet.com"
 authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
 homepage: "https://github.com/janestreet/email_message"
@@ -10,12 +11,12 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "4.08.0"}
-  "async"
-  "core"
-  "core_kernel"
-  "ppx_jane"
-  "re2"
+  "ocaml"       {>= "4.08.0"}
+  "async"       {>= "v0.14" & < "v0.15"}
+  "core"        {>= "v0.14" & < "v0.15"}
+  "core_kernel" {>= "v0.14" & < "v0.15"}
+  "ppx_jane"    {>= "v0.14" & < "v0.15"}
+  "re2"         {>= "v0.14" & < "v0.15"}
   "angstrom"    {>= "0.14.1"}
   "base64"
   "cryptokit"
