--- a/test/dune
+++ b/test/dune
@@ -1,4 +1,4 @@
 (library (name email_message_test)
- (libraries async core_kernel.core email_message expect_test_helpers_async
+ (libraries async core email_message expect_test_helpers_async
   expect_test_helpers_core)
  (preprocess (pps ppx_jane)))
