--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,4 @@
 (library (name email_message) (public_name email_message)
- (libraries async core_unix.bigstring_unix core cryptokit email_address re2
-  core_unix.sys_unix core_unix.uuid email_message_kernel)
+ (libraries async base64 core_unix.bigstring_unix core cryptokit
+  email_address re2 core_unix.sys_unix core_unix.uuid email_message_kernel)
  (preprocess (pps ppx_jane)))
