--- a/email_address/src/dune
+++ b/email_address/src/dune
@@ -1,2 +1,6 @@
-(library (name email_address) (public_name email_message.email_address)
- (libraries angstrom core base64) (preprocess (pps ppx_jane)))
+(library
+ (name email_address)
+ (public_name email_message.email_address)
+ (libraries angstrom core base64)
+ (preprocess
+  (pps ppx_jane)))
