--- a/test/dune
+++ b/test/dune
@@ -1,4 +1,6 @@
-(library (name email_message_test)
+(library
+ (name email_message_test)
  (libraries async core email_message expect_test_helpers_async
-  expect_test_helpers_core)
- (preprocess (pps ppx_jane)))
+   expect_test_helpers_core)
+ (preprocess
+  (pps ppx_jane)))
