--- a/email_message.opam
+++ b/email_message.opam
@@ -1,4 +1,5 @@
 opam-version: "2.0"
+version: "v0.17.0"
 maintainer: "Jane Street developers"
 authors: ["Jane Street Group, LLC"]
 homepage: "https://github.com/janestreet/email_message"
@@ -10,13 +11,13 @@ build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
 depends: [
-  "ocaml" {>= "5.1.0"}
-  "async"
-  "core"
-  "core_kernel"
-  "core_unix"
-  "ppx_jane"
-  "re2"
+  "ocaml"       {>= "5.1.0"}
+  "async"       {>= "v0.17" & < "v0.18"}
+  "core"        {>= "v0.17" & < "v0.18"}
+  "core_kernel" {>= "v0.17" & < "v0.18"}
+  "core_unix"   {>= "v0.17" & < "v0.18"}
+  "ppx_jane"    {>= "v0.17" & < "v0.18"}
+  "re2"         {>= "v0.17" & < "v0.18"}
   "angstrom"    {>= "0.15.0"}
   "base64"      {>= "3.4.0"}
   "cryptokit"   {>= "1.16" & < "1.17"}
