--- a/src/dune
+++ b/src/dune
@@ -2,6 +2,7 @@
  (name email_message)
  (public_name email_message)
  (libraries async base64 core_unix.bigstring_unix core cryptokit
-   email_address re2 core_unix.sys_unix core_unix.uuid email_message_kernel)
+   email_address re2 core_unix.sys_unix core_unix.uuid angstrom core_unix
+   email_message_kernel core_unix.time_float_unix core_kernel.uuid)
  (preprocess
   (pps ppx_jane)))
